--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   image_picker: ^1.2.1
   dio: ^5.9.0
+  intl: ^0.20.2
+  path_provider: ^2.1.5
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
